microbench test converted to preview